skip options add add KafkaTopic
Use KafkaTopic to get topics and bootstrap server